# Robovac

./: .gitignore  README.md  pyproject.toml
docs/: PLAN.md
firmware/esp32_motor/: README.md  platformio.ini
firmware/esp32_motor/src/: main.cpp
robot/: __init__.py  config.py  main.py  requirements.txt
robot/comms/: __init__.py  server_client.py
robot/drivers/: __init__.py  camera.py  lidar_driver.py  serial_link.py
robot/navigation/: __init__.py  controller.py  planner.py
robot/perception/: __init__.py  odometry.py  slam.py  visual_loc.py
server/: __init__.py  app.py  planner.py  requirements.txt
server/store/: __init__.py  db.py
server/web/: app.js  index.html  style.css
shared/: __init__.py  schemas.py
tests/: test_planner.py  test_schemas.py
tools/: __init__.py  map_viewer.py  record_logs.py  replay.py
